2012-10-19 Riccardo Mottola <rm@gnu.org>

	* DBProgress.h
	* DBProgress.m
	* DBProgressProtocol.h
	Progress infrastructure.

2012-07-23 Riccardo Mottola <rm@gnu.org>

	* DBLogger.m
	Make a runloop iteration before scrolling text.

2012-07-18 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Remember and set the login environment.

2012-07-18 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Transform Dictionary in Mutable Dictionary

2012-07-17 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	* Resources/DataBasin.gorm
	Rough initial work for remembering logins.

	* DBCVSWriter.m
	* DBSObject.h
	* DBSObject.m
	Make value handling generic and not String restrained.

2012-07-13 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Fix warnining by returning a string and not casting a dictionary.

2012-07-13 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Fake AggregateResult for count()

2012-07-12 Riccardo Mottola <rm@gnu.org>

	* DBCVSWriter.m
	Fix parsing of aggregate objects, fix formatting of numbers as scalar objects
2012-07-12 Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m
	Clean up headers.

2012-07-09 Riccardo Mottola <rm@gnu.org>

	* DBLogger.[h,m]
	Log cleaner method fixed.

	* Resources/Log.gorm
	Clean log button.

2012-07-09 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* DBCVSReader.h
	* DBCVSReader.m
	* DBCVSWriter.h
	* DBCVSWriter.m
	Add logger to CVS reader and writer.

	* DBLogger.[h,m]
	Log cleaner method.

	* DBSoapCSV.[h,m]
	Adopt logger.

	* DBSoap.[h,m]
	Logger getter.

2012-07-09 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Bump API version to 25

2012-07-06 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	Cleanup and use new header generation for queryIdentify.

	* DBCVSWriter.m
	Rescurse and append header names correctly.

2012-07-06 Riccardo Mottola <rm@gnu.org>

	* DBCVSWriter.h
	* DBCVSWriter.m
	* DBSoapCSV.m
	Make parsing of objects recursive and support . notation.