@@ -22,15 +22,25 @@
    Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111 USA.
 */
 
+@class DBLogger;
+
 @protocol DBProgressProtocol <NSObject>
+
+- (void)setLogger:(DBLogger *)l;
 
 /** Sets the maximum value expected on which to calculate progress on.<br>
     E.g. it could be the maximum expected number of records.
   */
--(void)setMaximumValue:(NSUInteger)max;
+-(void)setMaximumValue:(unsigned long)max;
 
 /** Sets the current progress, e.g. the current count */
--(void)setCurrentValue:(NSUInteger)current;
+-(void)setCurrentValue:(unsigned long)current;
+
+/** increments the current value by given amount */
+-(void)incrementCurrentValue:(unsigned long)amount;
+
+/** reinitializes internal status (current, maxmimum and percentage */
+-(void)reset;
 
 /** Forces completion */
 -(void)setEnd;
